--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./mill_scripts/index.js",
   "scripts": {
-    "watch": "rollup -c --watch",
-    "pp": "jscodeshift -t ./utils/transformer.js ./scripts/script.js ./scripts/script.js"
+    "build": "./node_modules/.bin/rollup -c",
+    "watch": "./node_modules/.bin/rollup -c -w"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "fs": "0.0.1-security",
-    "jscodeshift": "^0.5.0",
-    "lodash": "^4.17.10",
-    "lodash-es": "^4.17.10",
     "path": "^0.12.7",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
