--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AR_tests2",
+  "name": "Modular AR studio",
   "version": "1.0.0",
   "description": "",
   "main": "./mill_scripts/index.js",
