--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Modular AR studio",
+  "name": "modular_ar_studio",
   "version": "1.0.0",
   "description": "",
   "main": "./mill_scripts/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/rollup -c",
-    "watch": "./node_modules/.bin/rollup -c -w"
+    "build": "./node_modules/.bin/rollup -c --environment=Production",
+    "watch": "./node_modules/.bin/rollup -c -w --environment=Development"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^7.0.0",
     "path": "^0.12.7",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^3.0.4",
@@ -29,5 +30,6 @@
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^3.0.0"
-  }
+  },
+  "dependencies": {}
 }
